Circuit Breakers/echo_vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: echo-vs
spec:
  hosts:
    - echo-server
  http:
    - route:
        - destination:
            host: echo-server
            port:
              number: 80
